--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,14 @@
   
   
 <build>
+
+<resources>
+      <resource>
+        <directory>src/main/java/resources</directory>
+        <filtering>true</filtering>
+      </resource>
+</resources>
+      
 <pluginManagement>
 <plugins>
 <plugin>
@@ -57,6 +65,25 @@
   <scope>test</scope>
 </dependency>
     
+    <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+  <dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-api</artifactId>
+    <version>2.4</version>
+  </dependency>
+  
+  <dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-core</artifactId>
+    <version>2.4</version>
+  </dependency>
+  
+<dependency>
+    <groupId>com.aventstack</groupId>
+    <artifactId>extentreports</artifactId>
+    <version>3.1.5</version>
+</dependency>
+
     <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
 <!-- <dependency>
     <groupId>org.apache.maven.plugins</groupId>
